  * inline: Fix urls to feed when feedfile is used on an index page.
  * git, mercurial: Fix --getctime to return file creation time,
    not last commit time.
  * Updated French translation (Jean-Luc Coulon). Closes: #521072
  * css: Add clear: both to inlinefooter.
  * comments: Fix too loose test for comments pages that matched
    normal pages with "comment_" in their name. Closes: #521322

 -- Joey Hess <joeyh@debian.org>  Thu, 19 Mar 2009 15:32:49 -0400

ikiwiki (3.08) unstable; urgency=low

  * git: Fix utf-8 encoding of author names.
  * git: Manually decode git output from utf-8, avoids
    warning messages on invalidly encoded output.
  * Fix bug that caused weird things to appear as page types.

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Mar 2009 17:54:47 -0400

ikiwiki (3.07) unstable; urgency=low
 
  * Updated German translation (Kai Wasserbäch). Closes: #518377
  * Updated French translation (Jean-Luc Coulon). Closes: #518510
  * wmd: New plugin contributed by William Uther to support the WMD
    Wysiwym markdown editor.
  * smiley: Avoid infinite loop in smiley expansion triggered
    by the template scan mode change in version 3.05. Closes: #518805
  * template: When loading a template in scan mode, let preprocess
    know it only needs to scan.

 -- Joey Hess <joeyh@debian.org>  Sun, 08 Mar 2009 19:00:46 -0400

ikiwiki (3.06) unstable; urgency=low

  * Setup automator: Fix bug in password comparison. Closes: #517654

 -- Joey Hess <joeyh@debian.org>  Sun, 01 Mar 2009 15:02:30 -0500

ikiwiki (3.05) unstable; urgency=low

  * debhelper v7(.0.50); rules file minimisation.
  * template: Load templates in scan mode.
    This is potentially expensive, but is necessary so that meta and tag
    directives, and other links on templates affect the page using the
    template reliably.
  * goto: Fix redirect to comments.
  * Add noextension parameter to htmlize hooks to support, eg, Makefile.
  * Add tagged() PageSpec.