@@ -1,4 +1,4 @@
-<div class="comment" id="<TMPL_VAR NAME=INLINEPAGE>">
+<div class="comment" id="<TMPL_VAR NAME=COMMENTID>">
 
 <div class="comment-subject">
 <TMPL_IF PERMALINK>
