@@ -9,6 +9,7 @@ ikiwiki (3.09) UNRELEASED; urgency=low
   * css: Add clear: both to inlinefooter.
   * comments: Fix too loose test for comments pages that matched
     normal pages with "comment_" in their name. Closes: #521322
+  * comments: Fix anchor ids to be legal xhtml. Closes: #521339
 
  -- Joey Hess <joeyh@debian.org>  Thu, 19 Mar 2009 15:32:49 -0400
 
